[package]
name = "ssri2"
version = "0.1.0"
authors = ["cijiugechu <cijiugechu@gmail.com>", "Kat Marchán <kzm@zkat.tech>"]
edition = "2021"
description = "Various utilities for handling Subresource Integrity."
license = "Apache-2.0"
repository = "https://github.com/cijiugechu/ssri2"
homepage = "https://github.com/cijiugechu/ssri2"
readme = "README.md"
rust-version = "1.75.0"

[dependencies]
base64 = "0.21.0"
digest = "0.10.6"
hex = "0.4.3"
miette = "5.7.0"
serde = { version = "1.0.190", optional = true }
sha-1 = "0.10.0"
sha2 = "0.10.8"
thiserror = "1.0.50"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }

[features]
default = ["serde"]

[dev-dependencies]
serde_derive = "1.0.152"
serde_json = "1.0.93"
